initial commit and added style.css

--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            .card{
-                background-color: greenyellow;
-                margin: 20px;
-                padding: 20px;
-                border: 2px solid
-                }
-
-            body{
-                background-color: aquamarine
-            }
+      <link rel="stylesheet" href="./style.css"/>
             
 
-        </style>
+        
 
     </head>
 
